# Agentic-Defense-Matrix-ADM-

./: .editorconfig  .gitignore  .golangci.yml  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum  sweep
.github/: dependabot.yml
.github/workflows/: apply-llm-keys.yml  ci.yml  codeql.yml  ethicalcheck.yml  hadolint.yml  images.yml  red_team_fuzz.yml  release.yml  terraform-oci.yml
agents/schemas/: executor_tools.json  planner_tools.json  summarizer_tools.json  tool_definitions.json
analysis/: Cargo.toml
analysis/migrations/: 001_init.sql
analysis/src/: elastic.rs  handlers.rs  main.rs  model.rs
analysis/web/: index.html
cmd/baseline/: main.go
cmd/control_plane/: main.go
cmd/gateway/: main.go
cmd/greenteam_agent/: main.go
cmd/overhead/: main.go  overhead_test.go
cmd/redteam_agent/: main.go
cmd/siem_engine/: main.go  redis.go
cmd/sweep/: main.go
daemon_watchdog/: Cargo.toml  rustfmt.toml
daemon_watchdog/src/: config.rs  egress_blocker.rs  macos_es.rs  main.rs  policy_enforcer.rs  telemetry.rs  wfp_filter.rs
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: globals.css  page.tsx
dashboard/lib/: api.ts  i18n.ts
deploy/: Caddyfile  Dockerfile.analysis  Dockerfile.battle  Dockerfile.go  Dockerfile.opa  Dockerfile.rust  docker-compose.battle.yml  otel-collector.yaml  siem_rules.yaml  watchdog.toml
deploy/scripts/: battle-up.sh  logs.sh  restart.sh  setup.sh  status.sh  update.sh
deploy/terraform/: cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: battle-orchestration.md  instruction.md  threat-model.md
docs/adr/: 001-opa-spire-auth.md  002-redis-streams-siem.md  003-separate-agent-services.md  004-rust-watchdog.md  005-ollama-llm.md  006-hosted-llm-failover.md  008-llm-red-green-teams.md
docs/architecture/: c4-container.puml  data-flow.md  deployment.md  live-deployment.md  security.md  system-overview.md
docs/research/: README.md  baseline-results.md  evaluation-plan.md  figures.html  formalization-containment.md  formalization-intent-drift.md  latency-results.json  latency-results.md  planner.html  (+6 more)
scripts/: setup-dev.sh
worker/: .gitignore  README.md  package-lock.json  package.json  wrangler.jsonc
(+26 files in other folders)
