[package]
name = "adm-watchdog"
version = "0.1.0"
edition = "2021"
authors = ["ADM Team"]
description = "Endpoint telemetry daemon for Agentic Defense Matrix"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures = "0.3"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"
core-foundation = "0.9"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
windows-service = "0.7"

[[bin]]
name = "adm-watchdog"
path = "src/main.rs"
